// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single active line snapshot 1`] = `
[
  {
    "active": true,
    "children": [],
    "color": "#000000",
    "geometry": {
      "coordinates": [
        [
          50,
          50,
        ],
        [
          60,
          60,
        ],
      ],
      "type": "LineString",
    },
    "hidden": false,
    "hoveredByMe": false,
    "id": "id1",
    "idx": "",
    "name": null,
    "parent": {
      "children": [],
      "id": "",
      "parent": null,
    },
    "selectedByMe": false,
    "selectedByPeers": null,
    "type": "feature",
  },
  {
    "feature": {
      "active": true,
      "children": [],
      "color": "#000000",
      "geometry": {
        "coordinates": [
          [
            50,
            50,
          ],
          [
            60,
            60,
          ],
        ],
        "type": "LineString",
      },
      "hidden": false,
      "hoveredByMe": false,
      "id": "id1",
      "idx": "",
      "name": null,
      "parent": {
        "children": [],
        "id": "",
        "parent": null,
      },
      "selectedByMe": false,
      "selectedByPeers": null,
      "type": "feature",
    },
    "geometry": {
      "coordinates": [
        50,
        50,
      ],
      "type": "Point",
    },
    "handleType": "point",
    "i": 0,
    "id": "id1-hv0",
    "type": "handle",
  },
  {
    "feature": {
      "active": true,
      "children": [],
      "color": "#000000",
      "geometry": {
        "coordinates": [
          [
            50,
            50,
          ],
          [
            60,
            60,
          ],
        ],
        "type": "LineString",
      },
      "hidden": false,
      "hoveredByMe": false,
      "id": "id1",
      "idx": "",
      "name": null,
      "parent": {
        "children": [],
        "id": "",
        "parent": null,
      },
      "selectedByMe": false,
      "selectedByPeers": null,
      "type": "feature",
    },
    "geometry": {
      "coordinates": [
        55,
        55,
      ],
      "type": "Point",
    },
    "handleType": "midpoint",
    "i": 0,
    "id": "id1-hm0",
    "type": "handle",
  },
  {
    "feature": {
      "active": true,
      "children": [],
      "color": "#000000",
      "geometry": {
        "coordinates": [
          [
            50,
            50,
          ],
          [
            60,
            60,
          ],
        ],
        "type": "LineString",
      },
      "hidden": false,
      "hoveredByMe": false,
      "id": "id1",
      "idx": "",
      "name": null,
      "parent": {
        "children": [],
        "id": "",
        "parent": null,
      },
      "selectedByMe": false,
      "selectedByPeers": null,
      "type": "feature",
    },
    "geometry": {
      "coordinates": [
        60,
        60,
      ],
      "type": "Point",
    },
    "handleType": "point",
    "i": 1,
    "id": "id1-hv1",
    "type": "handle",
  },
]
`;

exports[`single line snapshot 1`] = `
[
  {
    "active": false,
    "children": [],
    "color": "#000000",
    "geometry": {
      "coordinates": [
        [
          50,
          50,
        ],
        [
          60,
          60,
        ],
      ],
      "type": "LineString",
    },
    "hidden": false,
    "hoveredByMe": false,
    "id": "id1",
    "idx": "",
    "name": null,
    "parent": {
      "children": [],
      "id": "",
      "parent": null,
    },
    "selectedByMe": false,
    "selectedByPeers": null,
    "type": "feature",
  },
]
`;

exports[`single point snapshot 1`] = `
[
  {
    "active": false,
    "children": [],
    "color": "#000000",
    "geometry": {
      "coordinates": [
        50,
        50,
      ],
      "type": "Point",
    },
    "hidden": false,
    "hoveredByMe": false,
    "id": "id1",
    "idx": "",
    "name": null,
    "parent": {
      "children": [],
      "id": "",
      "parent": null,
    },
    "selectedByMe": false,
    "selectedByPeers": null,
    "type": "feature",
  },
]
`;
